# firefly

./: .bazelrc  .gitattributes  .gitignore  AUTHORS  BUILD  BUILD.bazel  CONTRIBUTORS  Cargo.toml  Dockerfile  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  build-docker-builder  clean  deps.bzl  docker-build  nogo-config.json  run-qemu
bazel/cross-compiling/: BUILD  BUILD.bazel  README.md  config-transition.bzl  librust.bzl  x86_64_cc_toolchain.bzl  x86_64_rust_toolchain.bzl
bootloader/: .cargo_vcs_info.json  BUILD.bazel  README.md  boot_info.rs  build.rs  e820.s  lib.rs  linker.ld  main.rs  memory.ruse  page_table.rs  serial-port.ruse  stage-1.ruse  stage-2.ruse  stage-3.ruse  stage-4.ruse  stage_1.s  stage_2.s  stage_3.s  uart_serial_port.s  vga_text_80x25.s
bootloader/src/: boot_info.rs  frame_allocator.rs  level4_entries.rs  lib.rs  main.rs  page_table.rs  printer.rs  sse.rs  stage_1.s  stage_2.s  stage_3.s
bootloader/src/bootinfo/: memory_map.rs  mod.rs
bootloader/src/printer/: mod.rs  vga_320x200.rs
bootloader/src/video_mode/: vga_320x200.s  vga_text_80x25.s
kernel/: .gitignore  BUILD  BUILD.bazel  Cargo.toml  Dockerfile  Makefile  README.md  build  cpu.c  cpu.h  docker-build  fmt  font.h  generate-font.go  go.mod  init.c  init.s  int.c  int.h  kernel.c  lib.rs  linker.ld  main.rs  main.ruse  mem.c  mem.h  mmio.c  mmio.h  ograC.toml  pci.c  pci.h  port.c  port.h  ports.c  ports.h  rand.c  rand.h  run  run-qemu  rust-toolchain.toml  (+12 more)
kernel/.cargo/: config
kernel/cpu/: BUILD  BUILD.bazel  lib.rs  local.rs
kernel/device/: driver.go
kernel/device/acpi/: acpi.go  acpi_test.go
kernel/device/tty/: device.go  vt.go  vt_test.go
kernel/drivers/pci/: BUILD  BUILD.bazel  lib.rs
kernel/drivers/scsi/: BUILD.bazel  lib.rs  sense.rs
kernel/drivers/serial/: BUILD  BUILD.bazel  lib.rs
kernel/drivers/virtio/: BUILD  BUILD.bazel  features.rs  lib.rs
kernel/filesystem/: BUILD  BUILD.bazel  lib.rs
kernel/gate/: gate_amd64.go
kernel/goruntime/: bootstrap.go  bootstrap_test.go
kernel/hal/: hal.go
kernel/interrupts/: BUILD  BUILD.bazel  irq.rs  lib.rs
kernel/kfmt/: panic.go  panic_test.go
kernel/kmain/: kmain.go
kernel/main/: stub.go
kernel/memory/: BUILD  BUILD.bazel  constants.rs  lib.rs  page_table.rs  phys_addr.rs  phys_frame.rs  phys_range.rs  virt_addr.rs  virt_page.rs  virt_range.rs
kernel/memory/heap/: BUILD.bazel  fixed_size_block.rs  lib.rs
kernel/memory/memlayout/: BUILD  addr_range.rs  lib.rs
kernel/memory/mmio/: BUILD  BUILD.bazel  lib.rs
kernel/memory/physmem/: BUILD  BUILD.bazel  bitmap.rs  boot_info.rs  lib.rs
kernel/memory/segmentation/: BUILD  BUILD.bazel  lib.rs
kernel/memory/virtmem/: BUILD  BUILD.bazel  bitmap.rs  bump.rs  fixed_size_block.rs  lib.rs  linked_list.rs  mapping.rs  translate.rs
kernel/mm/: page.go  page_test.go
kernel/mm/pmm/: bitmap_allocator.go  bitmap_allocator_test.go  bootmem_allocator.go  bootmem_allocator_test.go  pmm.go
kernel/mm/vmm/: addr_space.go  fault_amd64.go  fault_amd64_test.go  map.go  map_test.go  pdt.go  pdt_test.go  vmm.go  vmm_test.go
kernel/multitasking/: BUILD  BUILD.bazel  lib.rs  switch.rs
kernel/multitasking/process/: mod.rs
kernel/multitasking/scheduler/: mod.rs  timers.rs
kernel/multitasking/thread/: BUILD  lib.rs  mod.rs  stacks.rs  switch.rs
kernel/network/: BUILD  BUILD.bazel  device.rs  lib.rs  tcp.rs  udp.rs
kernel/power/: BUILD.bazel  lib.rs
kernel/random/: BUILD  BUILD.bazel  csprng.rs  lib.rs
kernel/segmentation/: BUILD  lib.rs
kernel/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  pci.rs  serial.rs  time.rs  vga_buffer.rs
kernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
kernel/src/cpu/: BUILD  Cargo.toml  lib.rs  local.rs  mod.rs
kernel/src/cpuid/: BUILD  Cargo.toml  lib.rs
kernel/src/drivers/: mod.rs  pci.rs  serial.rs
kernel/src/filesystem/: Cargo.toml  lib.rs  mod.rs
kernel/src/interrupts/: BUILD  Cargo.toml  irq.rs  lib.rs  mod.rs
kernel/src/memory/: README.md  constants.rs  debug.rs  mmio.rs  mod.rs
kernel/src/multitasking/: cpu_local.rs  mod.rs
kernel/src/network/: BUILD  Cargo.toml  lib.rs  mod.rs  tcp.rs  udp.rs
kernel/src/random/: BUILD  Cargo.toml  csprng.rs  lib.rs  mod.rs  rdrand.rs
kernel/src/segmentation/: BUILD  Cargo.toml  lib.rs
kernel/src/storage/: Cargo.toml  mod.rs
kernel/src/structures/: mod.rs
kernel/src/syscalls/: entry.s  mod.rs
kernel/storage/: BUILD  BUILD.bazel  lib.rs
kernel/syscalls/: entry.s  mod.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
kernel/time/: BUILD  BUILD.bazel  lib.rs  rtc.rs  slice.rs  ticker.rs
shared/bootinfo/: BUILD.bazel  lib.rs
shared/filepath/: BUILD.bazel  README.md  lib.rs
shared/firefly_abi/: BUILD.bazel  x86_64.plan
tools/bootimage/: BUILD  BUILD.bazel  defs.bzl  main.go  main.rs
tools/check-deps/: BUILD.bazel  main.go
tools/crate-deps/: BUILD  BUILD.bazel  crate_build_test.go  main.go  manifest_test.go
tools/crate-features/: BUILD.bazel  main.go
tools/crate-lints/: BUILD.bazel  main.go
tools/cratesio/: BUILD.bazel  cratesio.go  cratesio_test.go  structures.go
tools/gomodproxy/: BUILD.bazel  gomodproxy.go  gosumdb.go
tools/plan/: BUILD  BUILD.bazel  README.md  build.go  defs.bzl  docs.go  format.go  main.go  rust.go  rust_test.go
tools/ruse/: BUILD.bazel  README.md  SPEC.md  def.bzl  main.go
tools/simplehttp/: BUILD.bazel  http.go
tools/starlark/: BUILD  BUILD.bazel  starlark.go  starlark_test.go
tools/update-deps/: BUILD  BUILD.bazel  fields_test.go  go.go  go_test.go  main.go  rules.go  rules_test.go  rust.go  rust_test.go  vendored.go  vendored_test.go
tools/vendeps/: BUILD.bazel  actions.go  cache.go  cache_test.go  check.go  digest.go  digest_test.go  go.go  license.go  license_test.go  main.go  patch.go  rust.go  templates.go  templates_test.go  updates.go  updates_test.go  vendeps.go  vendor.go  vendor_test.go
tools/vendor-deps/: BUILD.bazel  actions.go  main.go  templates.go  templates_test.go  vendor.go  vendor_test.go
(+6217 files in other folders)
