[workspace]
members = [
    "kernel",
    "kernel/src/cpu",
    "kernel/src/drivers/pci",
    "kernel/src/drivers/serial",
    "kernel/src/filesystem",
    "kernel/src/interrupts",
    "kernel/src/memory/memlayout",
    "kernel/src/memory/mmio",
    "kernel/src/memory/physmem",
    "kernel/src/memory/virtmem",
    "kernel/src/random",
    "kernel/src/segmentation",
    "kernel/src/storage",
    "kernel/src/time",
    "kernel/src/utils/align",
    "kernel/src/utils/bitmap_index",
    "kernel/src/utils/pretty",
    "kernel/src/utils/tar",
    "shared/syscalls",
]
