# Copyright 2024 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

module(name = "firefly")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Arm A64 instruction set architecture, version ID030323, March 2023.
http_archive(
    name = "a64manual",
    build_file = "@//bazel:a64xml.BUILD",
    sha256 = "4be65585693d1bf1f1765bcc1a2493ce5df99718cc33d6e98fc3e83f76019bfd",
    url = "https://developer.arm.com/-/media/developer/products/architecture/armv9-a-architecture/2023-03/ISA_A64_xml_A_profile-2023-03.tar.gz?rev=3ddc4fac5a824f1fa5a615e2ec21d3aa&hash=3998E2AB39837E332B6AE2533EE26EC6",
)

bazel_dep(name = "rules_go", version = "0.45.1")

go_sdk = use_extension("@rules_go//go:extension.bzl", "go_sdk")

go_sdk.download(version = "1.21.5")
