# Copyright 2024 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

module(name = "firefly")

bazel_dep(name = "rules_go", version = "0.46.0")

go_sdk = use_extension("@rules_go//go:extension.bzl", "go_sdk")

go_sdk.download(version = "1.21.5")
