# Copyright 2022 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_clippy", "rust_doc", "rust_library", "rustfmt_test")
load("//bazel/cross-compiling:config-transition.bzl", "x86_64_bare_metal_rust_binary")

rust_library(
    name = "bootloader_lib",
    srcs = [
        "boot_info.rs",
        "frame_allocator.rs",
        "level4_entries.rs",
        "lib.rs",
        "page_table.rs",
    ],
    compile_data = [
        "e820.s",
        "stage_1.s",
        "stage_2.s",
        "stage_3.s",
        "uart_serial_port.s",
    ],
    crate_name = "bootloader",
    edition = "2021",
    visibility = ["//visibility:private"],
    deps = [
        "//shared/bootinfo",
        "//vendor/rust/fixedvec",
        "//vendor/rust/x86_64",
        "//vendor/rust/xmas-elf",
    ],
)

rust_clippy(
    name = "clippy",
    deps = [":bootloader_lib"],
)

rust_doc(
    name = "docs",
    crate = ":bootloader_lib",
)

rustfmt_test(
    name = "fmt_test",
    size = "small",
    targets = [":bootloader_lib"],
)

rust_binary(
    name = "bootloader_bin",
    srcs = ["main.rs"],
    edition = "2021",
    linker_script = "linker.ld",
    rustc_flags = [
        "-Cpanic=abort",
        "-Clink-args=-nostartfiles -static -Wl,--gc-sections -Wl,--build-id=none",
        "-Ctarget-feature=+crt-static",
    ],
    tags = ["manual"],
    deps = [
        ":bootloader_lib",
        "//vendor/rust/uart_16550",
    ],
)

x86_64_bare_metal_rust_binary(
    name = "bootloader",
    rust_binary = ":bootloader_bin",
    visibility = ["//visibility:public"],
)
