# Copyright 2023 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("//tools/ruse:def.bzl", "ruse_binary", "ruse_library")

ruse_library(
    name = "bootloader_lib",
    srcs = [
        "memory.ruse",
        "stage-1.ruse",
        "stage-2.ruse",
    ],
    arch = "x86-64",
    package_path = "firefly-os.dev/bootloader",
    visibility = ["//visibility:private"],
)

ruse_binary(
    name = "bootloader",
    format = "elf",
    package = ":bootloader_lib",
    visibility = ["//visibility:public"],
)
