[package]
name = "kernel"
version = "0.1.0"
authors = ["Jamie Hall <the.sly.marbo@googlemail.com>"]
edition = "2018"

[lib]
name = "kernel"

[dependencies]
bitflags = "=1.3.2"
bootloader = {version = "=0.9.21", features = ["map_physical_memory"]}
chacha20 = "=0.8.1"
hex-literal = "=0.3.4"
lazy_static = {version = "=1.4.0", features = ["spin_no_std"]}
linked_list_allocator = "=0.9.0"
managed = {version = "=0.8", default-features = false, features = ["map"]}
pic8259 = "=0.10.1"
raw-cpuid = {version = "=10.2.0", default-features = false}
sha2 = {version = "=0.10.1", default-features = false, features = ["force-soft"]}
smoltcp = {version = "=0.8.0", default-features = false, features = ["alloc", "async", "medium-ethernet", "proto-dhcpv4", "proto-ipv4", "socket", "socket-dhcpv4", "socket-raw", "socket-udp", "socket-tcp"]}
spin = "=0.9.2"
syscalls = {path = "../shared/syscalls"}
uart_16550 = "=0.2.15"
volatile = "=0.4.4"
x86_64 = "=0.14.7"

[package.metadata.bootimage]
test-success-exit-code = 33    # (0x10 << 1) | 1
test-timeout = 300             # (in seconds)
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"
]
run-command = [
	"qemu-system-x86_64",
	"-drive", "format=raw,file={}",
	"-device", "virtio-net,netdev=net0,disable-legacy=on,disable-modern=off",
	"-netdev", "user,id=net0",
	"-object", "filter-dump,id=filter0,netdev=net0,file=virtio-net.pcap",
	"-device", "virtio-rng-pci,disable-legacy=on,disable-modern=off",
	"-serial", "stdio",
	"-display", "none"
]

[package.metadata.bootloader]
boot-info-address = "0xffff800040000000"
kernel-stack-address = "0xffff80005554f000"
kernel-stack-size = 128
physical-memory-offset = "0xffff800080000000"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
