[package]
name = "kernel"
version = "0.1.0"
authors = ["Jamie Hall <the.sly.marbo@googlemail.com>"]
edition = "2018"

[lib]
name = "kernel"

[dependencies]
align = {path = "src/utils/align"}
bitflags = "=1.3.2"
bitmap_index = {path = "src/utils/bitmap_index"}
bootloader = {version = "=0.9.21", features = ["map_physical_memory"]}
chacha20 = "=0.8.1"
cpuid = {path = "src/cpuid"}
filesystem = {path = "src/filesystem"}
interrupts = {path = "src/interrupts"}
lazy_static = {version = "=1.4.0", features = ["spin_no_std"]}
managed = {version = "=0.8", default-features = false, features = ["map"]}
memlayout = {path = "src/memory/memlayout"}
mmio = {path = "src/memory/mmio"}
pci = {path = "src/drivers/pci"}
physmem = {path = "src/memory/physmem"}
pretty = {path = "src/utils/pretty"}
segmentation = {path = "src/segmentation"}
serial = {path = "src/drivers/serial"}
sha2 = {version = "=0.10.1", default-features = false, features = ["force-soft"]}
smoltcp = {version = "=0.8.0", default-features = false, features = ["alloc", "async", "medium-ethernet", "proto-dhcpv4", "proto-ipv4", "socket", "socket-dhcpv4", "socket-raw", "socket-udp", "socket-tcp"]}
spin = "=0.9.2"
storage = {path = "src/storage"}
syscalls = {path = "../shared/syscalls"}
tar = {path = "src/utils/tar"}
time = {path = "src/time"}
uart_16550 = "=0.2.15"
virtmem = {path = "src/memory/virtmem"}
volatile = "=0.4.4"
x86_64 = "=0.14.7"

[package.metadata.bootimage]
test-success-exit-code = 33    # (0x10 << 1) | 1
test-timeout = 300             # (in seconds)
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"
]
run-command = [
	"qemu-system-x86_64",
	"-drive", "format=raw,file={}",
	"-device", "virtio-net,netdev=net0,disable-legacy=on,disable-modern=off",
	"-netdev", "user,id=net0",
	"-object", "filter-dump,id=filter0,netdev=net0,file=virtio-net.pcap",
	"-device", "virtio-rng-pci,disable-legacy=on,disable-modern=off",
	"-serial", "stdio",
	"-display", "none"
]

[package.metadata.bootloader]
boot-info-address = "0xffff800040000000"
kernel-stack-address = "0xffff80005554f000"
kernel-stack-size = 128
physical-memory-offset = "0xffff800080000000"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
