# Copyright 2022 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

[package.metadata.bootloader]
boot-info-address = "0xffff800040000000"
kernel-stack-address = "0xffff80005554f000"
kernel-stack-size = 128
physical-memory-offset = "0xffff800080000000"
