# Copyright 2022 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@rules_rust//rust:defs.bzl", "rust_clippy", "rust_doc", "rust_library", "rustfmt_test")

rust_library(
    name = "cpu",
    srcs = [
        "lib.rs",
        "local.rs",
    ],
    crate_name = "cpu",
    edition = "2021",
    visibility = ["//kernel:__subpackages__"],
    deps = [
        "//kernel/drivers/serial",
        "//kernel/memory",
        "//kernel/memory/physmem",
        "//kernel/memory/virtmem",
        "//kernel/power",
        "//kernel/utils/spin",
        "//vendor/rust/raw-cpuid",
        "//vendor/rust/x86_64",
    ],
)

rust_clippy(
    name = "clippy",
    deps = [":cpu"],
)

rust_doc(
    name = "docs",
    crate = ":cpu",
)

rustfmt_test(
    name = "fmt_test",
    size = "small",
    targets = [":cpu"],
)
