# Copyright 2022 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@rules_rust//rust:defs.bzl", "rust_clippy", "rust_doc", "rust_library", "rustfmt_test")

rust_library(
    name = "power",
    srcs = [
        "lib.rs",
    ],
    crate_name = "power",
    edition = "2021",
    visibility = ["//kernel:__subpackages__"],
    deps = [
        "//kernel/drivers/pci",
        "//kernel/drivers/serial",
        "//kernel/memory",
        "//vendor/rust/acpi",
        "//vendor/rust/aml",
        "//vendor/rust/x86_64",
    ],
)

rust_clippy(
    name = "clippy",
    deps = [":power"],
)

rust_doc(
    name = "docs",
    crate = ":power",
)

rustfmt_test(
    name = "fmt_test",
    size = "small",
    targets = [":power"],
)
