# Copyright 2022 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@rules_rust//rust:defs.bzl", "rust_clippy", "rust_doc", "rust_library", "rust_test", "rustfmt_test")

rust_library(
    name = "filepath",
    srcs = [
        "lib.rs",
    ],
    crate_name = "filepath",
    edition = "2021",
    visibility = ["//:__subpackages__"],
)

rust_clippy(
    name = "clippy",
    deps = [":filepath"],
)

rust_doc(
    name = "docs",
    crate = ":filepath",
)

rustfmt_test(
    name = "fmt_test",
    size = "small",
    targets = [":filepath"],
)

rust_test(
    name = "filepath_test",
    size = "small",
    crate = ":filepath",
)
