# Copyright 2022 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@rules_rust//rust:defs.bzl", "rust_clippy", "rust_doc", "rust_library", "rust_test")
load("//tools/plan:defs.bzl", "plan_docs", "plan_format", "plan_library", "plan_rust_shared")

plan_library(
    name = "firefly_abi",
    src = "x86_64.plan",
    arch = "x86-64",
    visibility = ["//visibility:public"],
)

plan_docs(
    name = "docs",
    embed = ":firefly_abi",
)

plan_format(
    name = "firefly_abi_format",
    embed = ":firefly_abi",
)

plan_rust_shared(
    name = "lib",
    embed = ":firefly_abi",
    rustfmt = "@rust_linux_x86_64__x86_64-unknown-linux-gnu_tools//:rustfmt",
)

rust_library(
    name = "rust",
    srcs = [":lib"],
    crate_name = "firefly_abi",
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/rust/bitflags",
    ],
)

rust_clippy(
    name = "rust_clippy",
    deps = [":rust"],
)

rust_doc(
    name = "rust_docs",
    crate = ":rust",
)

rust_test(
    name = "rust_test",
    size = "small",
    crate = ":rust",
)
