# Copyright 2022 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("//tools/plan:defs.bzl", "plan_docs", "plan_format", "plan_library")

plan_library(
    name = "firefly_abi",
    src = "x86_64.plan",
    arch = "x86-64",
    visibility = ["//visibility:public"],
)

plan_docs(
    name = "docs",
    embed = ":firefly_abi",
)

plan_format(
    name = "firefly_abi_format",
    embed = ":firefly_abi",
)
