# Copyright 2022 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "check-deps_lib",
    srcs = [
        "main.go",
    ],
    importpath = "firefly-os.dev/tools/check-deps",
    visibility = ["//visibility:private"],
    deps = [
        "//tools/starlark",
        "//tools/vendeps",
        "//vendor/github.com/google/osv-scanner/pkg/models",
        "//vendor/github.com/google/osv-scanner/pkg/osv",
    ],
)

go_binary(
    name = "check-deps",
    embed = [":check-deps_lib"],
    visibility = ["//visibility:public"],
)
