# Copyright 2022 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//bazel/gofmt:gofmt.bzl", "gofmt")

go_library(
    name = "cratesio",
    srcs = [
        "cratesio.go",
        "structures.go",
    ],
    importpath = "firefly-os.dev/tools/cratesio",
    visibility = ["//visibility:public"],
    deps = [
        "//tools/simplehttp",
    ],
)

gofmt(
    name = "gofmt",
    embed = [":cratesio"],
)

go_test(
    name = "cratesio_test",
    size = "small",
    srcs = [
        "cratesio_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":cratesio"],
    deps = [
        "//vendor/go/golang.org/x/time/rate",
        "//vendor/go/rsc.io/diff",
    ],
)
